--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
@@ -14,6 +15,7 @@
     "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
